config portfolio section

--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -220,6 +220,7 @@ section.about {
 }
 
 section.portfolio {
+    width: 100vw;
     position: relative;
     background: $theme-primary;
     height: 100%;
