Vista de Sede V0.1

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,6 +14,7 @@
     = favicon_tag 'favicon.png'
     = stylesheet_link_tag :base
     = stylesheet_link_tag :catalogo
+    = stylesheet_link_tag :sede
 
   %body
     %nav#mainNav.navbar.navbar-default.navbar-fixed-top
