--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -186,6 +186,11 @@ section {
 }
 
 section.about {
+    @media (max-width: 1000px) {
+    .img-about {
+    display: none;
+  }
+  }
     padding: 0 0;
     position: relative;
     height: 50vh;
@@ -226,51 +231,6 @@ section.portfolio {
     height: 100%;
     z-index: 1000;
     padding: 20px 10px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-line-pack: center;
-        align-content: center;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-
-    .container .row {
-      height: 100%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-       -ms-flex-line-pack: center;
-           align-content: center;
-       -webkit-box-pack: center;
-           -ms-flex-pack: center;
-               justify-content: center;
-    }
-
-    .entry {
-      display:-webkit-box;
-      display:-ms-flexbox;
-      display:flex;
-      -ms-flex-line-pack: center;
-          align-content: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-              -webkit-box-orient: vertical;
-              -webkit-box-direction: normal;
-                  -ms-flex-direction: column ;
-                      flex-direction: column ;
-
-    }
 
     .portfolio-title {
       color: white;
@@ -291,6 +251,7 @@ section.portfolio {
         box-shadow: none;
         margin:0;
         padding:0;
+        max-width: 400px;
     }
 
     .section-heading {
