--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -152,6 +152,9 @@ section.about {
   height: 50vh;
   min-height: auto;
   z-index: 100; }
+  @media (max-width: 1000px) {
+    section.about .img-about {
+      display: none; } }
   section.about .img-about {
     position: absolute;
     right: -100px;
@@ -180,47 +183,7 @@ section.portfolio {
   background: #b22f7b;
   height: 100%;
   z-index: 1000;
-  padding: 20px 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  section.portfolio .container .row {
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
-  section.portfolio .entry {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; }
+  padding: 20px 10px; }
   section.portfolio .portfolio-title {
     color: white;
     height: 80px; }
@@ -236,7 +199,8 @@ section.portfolio {
     border: 0 none;
     box-shadow: none;
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    max-width: 400px; }
   section.portfolio .section-heading {
     margin-bottom: 100px; }
     section.portfolio .section-heading h2 {
