--- a/admin/views/places/_form.haml
+++ b/admin/views/places/_form.haml
@@ -42,24 +42,14 @@
   .col-md-6.col-xs-12
     - error = @place.errors.include?(:header_picture)
     %fieldset.control-group{:class => error ? 'has-error' : ''}
-      =f.label :header_picture, :class => 'control-label'
+      =f.label :pictures, :class => 'control-label'
       .controls
-        =f.text_field :header_picture, :class => 'form-control input-large input-with-feedback'
+        =f.file_field :pictures, :class => 'form-control input-large input-with-feedback', multiple: true
         %span.help-inline=error ? f.error_message_on(:header_picture, :class => 'text-error') : pat(:example)
-  .col-md-6.col-xs-12
-    - error = @place.errors.include?(:pestanas_picture)
-    %fieldset.control-group{:class => error ? 'has-error' : ''}
-      =f.label :pestanas_picture, :class => 'control-label'
-      .controls
-        =f.text_field :pestanas_picture, :class => 'form-control input-large input-with-feedback'
-        %span.help-inline=error ? f.error_message_on(:pestanas_picture, :class => 'text-error') : pat(:example)
-  .col-md-6.col-xs-12
-    - error = @place.errors.include?(:cejas_picture)
-    %fieldset.control-group{:class => error ? 'has-error' : ''}
-      =f.label :cejas_picture, :class => 'control-label'
-      .controls
-        =f.text_field :cejas_picture, :class => 'form-control input-large input-with-feedback'
-        %span.help-inline=error ? f.error_message_on(:cejas_picture, :class => 'text-error') : pat(:example)
+      .images
+        - @place.place_pictures.each do |image|
+          .place-picture
+            %img{ src: image.picture }
   .col-xs-12
     #map{:style => "width: 300px;height: 300px;"}
     %a.btn.btn-primary#find-on-map{:href => "#"}
