--- a/admin/views/products/_form.haml
+++ b/admin/views/products/_form.haml
@@ -14,8 +14,10 @@
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :product_picture, :class => 'control-label'
   .controls
-    =f.text_field :product_picture, :class => 'form-control input-large input-with-feedback'
+    =f.file_field :product_picture, :class => 'form-control input-large input-with-feedback'
     %span.help-inline=error ? f.error_message_on(:product_picture, :class => 'text-error') : pat(:example)
+  .image
+    %img{ src: @product.product_picture }
 
 .form-actions
   =f.submit pat(:save), :class => 'btn btn-primary'
