--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -234,12 +234,13 @@ section.portfolio {
 
     .portfolio-title {
       color: white;
-      height: 80px;
+      height: 100%;
     }
     .caption {
         color: white;
         width:100%;
-        bottom: .3rem;
+        bottom: 0;
+        margin-bottom: 0;
         position: absolute;
         background:#000;
         background: -webkit-linear-gradient(bottom, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -252,6 +253,8 @@ section.portfolio {
         margin:0;
         padding:0;
         max-width: 400px;
+        height: 207px;
+        overflow: hidden;
     }
 
     .section-heading {
@@ -337,7 +340,7 @@ section.cta {
 }
 
 section.contact {
-    background: url('../img/foto-contacto-completa.jpg');
+    background: url('../img/foto-contacto.jpg');
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
@@ -369,6 +372,12 @@ section.contact {
      .send-button:hover {
       background-color: darken($theme-primary, 50%);
      }
+  .footer-cinta {
+    width: 100vw;
+    position: relative;
+    bottom: 0;
+    z-index: 10000;
+  }
   }
 
 footer {
@@ -475,9 +484,15 @@ body {
 }
 
 .places-list {
+    position: relative;
+    bottom: -15vh;
     margin-top: 25px;
+    z-index: 100000;
     a{
     color: white;
     font-size: 25px;
+    }
+    @media only screen and (min-width: 720px) {
+    bottom: -30vh;
     }
 }
