--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -186,11 +186,12 @@ section.portfolio {
   padding: 20px 10px; }
   section.portfolio .portfolio-title {
     color: white;
-    height: 80px; }
+    height: 100%; }
   section.portfolio .caption {
     color: white;
     width: 100%;
-    bottom: .3rem;
+    bottom: 0;
+    margin-bottom: 0;
     position: absolute;
     background: #000;
     background: -webkit-linear-gradient(bottom, #000 40%, transparent 100%) repeat scroll 0 0 transparent;
@@ -200,7 +201,9 @@ section.portfolio {
     box-shadow: none;
     margin: 0;
     padding: 0;
-    max-width: 400px; }
+    max-width: 400px;
+    height: 207px;
+    overflow: hidden; }
   section.portfolio .section-heading {
     margin-bottom: 100px; }
     section.portfolio .section-heading h2 {
@@ -264,7 +267,7 @@ section.cta {
     left: 0; }
 
 section.contact {
-  background: url("../img/foto-contacto-completa.jpg");
+  background: url("../img/foto-contacto.jpg");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
@@ -290,6 +293,11 @@ section.contact {
     fill: blue; }
   section.contact .send-button:hover {
     background-color: black; }
+  section.contact .footer-cinta {
+    width: 100vw;
+    position: relative;
+    bottom: 0;
+    z-index: 10000; }
 
 footer {
   background-color: #222222;
@@ -371,9 +379,15 @@ body {
   webkit-tap-highlight-color: #222222; }
 
 .places-list {
-  margin-top: 25px; }
+  position: relative;
+  bottom: -15vh;
+  margin-top: 25px;
+  z-index: 100000; }
   .places-list a {
     color: white;
     font-size: 25px; }
+  @media only screen and (min-width: 720px) {
+    .places-list {
+      bottom: -30vh; } }
 
 /*# sourceMappingURL=base.css.map */
