--- a/app/views/base/index.haml
+++ b/app/views/base/index.haml
@@ -33,7 +33,7 @@
         .owl-carousel
           .item
             .thumbnail.text-center
-              %a{ href: url(:base, :catalogo)}
+              %a{ href: url(:base, :servicios)}
                 %img.img-responsive{:alt => "", :src => "/img/foto-servicios.jpg"}/
               .caption
                 %h4 Servicios
