--- a/app/views/base/catalogo.haml
+++ b/app/views/base/catalogo.haml
@@ -5,15 +5,37 @@
         .col-sm-4.header-title-container-body
           %h4.text-left
             Productos
+  %img.footer-cinta.place{:src => "/img/cinta.png"}/
 
-.catalogo-container
+.catalogo-container.row
   .catalogo-title-bar
     Catálogo de Productos
   .table-container
     - Product.all.each do |p|
       .entry.col-sm-3
-        .image-container{ style: "background-image: url(#{p.get_picture_url})" }
+        .image-container{ style: "background-image: url(#{p.product_picture_url})" }
         .name
           = p.name
         .description
           = p.description
+%section#contact.contact
+  .container
+    .col-md-6.col-md-offset-3.col-xs-12.col-sm-8.col-sm-offset-1.contact-form
+      .title-contact-form
+        %h2
+          %img.logo-contact{:src => "/img/logo-contact.svg"}/
+          Contáctanos
+      %form{:role => "form"}
+        / text input
+        .form-group
+          %input.form-control{:placeholder => "Nombre", :required => "true", :type => "text"}/
+        .form-group
+          %input.form-control{:placeholder => "Email", :required => "true", :type => "email"}/
+        / textarea
+        .form-group
+          %textarea.form-control{:placeholder => "Mensaje", :required => "true", :rows => "3"}
+        %button.btn.send-button{:type => "submit"} Enviar
+  .col-xs-12.places-list
+    -@sedes.each do |s|
+      %a{ href: url(:base, :sede, s.id) }=s.name
+  %img.footer-cinta{:src => "/img/forma.png"}/
