--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,13 +11,12 @@
     / Latest compiled and minified CSS
     %link{:crossorigin => "anonymous", :href => "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", :integrity => "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", :rel => "stylesheet"}/
     / Optional theme
-    = favicon_tag 'favicon.png'
+    =favicon_tag '/img/favicon.ico'
     = stylesheet_link_tag :base
-    = stylesheet_link_tag :catalogo
-    = stylesheet_link_tag :sede
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.min.css", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.theme.default.css", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css", :rel => "stylesheet"}/
+    %link{href: "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel: "stylesheet", integrity: "sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin: "anonymous"}
   %body
     %nav#mainNav.navbar.navbar-default.navbar-fixed-top
       .container
