--- a/public/stylesheets/sede.css
+++ b/public/stylesheets/sede.css
@@ -1,12 +1,12 @@
 header.sede {
   z-index: 1000;
   position: relative;
-  height: 40vh;
+  height: 60vh;
   width: 100%;
   min-height: auto;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top center;
+  background-position: center center !important;
   color: white; }
   header.sede .header-title-container {
     position: relative;
@@ -41,15 +41,15 @@ header.catalogo {
         font-size: 85px !important; }
 
 .sede-container {
-  width: 100%;
-  padding: 0 15%; }
+  min-height: 450px; }
   .sede-container .service-type-box {
     padding: 10px 15px;
     margin: 15px 0; }
     .sede-container .service-type-box .service-type-picture {
       display: block;
       width: 100%;
-      height: 80px; }
+      height: 150px;
+      background-position: center center !important; }
     .sede-container .service-type-box .service-type-name {
       display: block;
       background: #a8276f;
@@ -69,5 +69,38 @@ header.catalogo {
       margin: 0 0 10px 0;
       color: black;
       font-size: 20px; }
+
+.map {
+  padding: 0 !important; }
+
+@media only screen and (min-width: 1080px) {
+  .gmap {
+    margin-bottom: 100px; } }
+@media only screen and (min-width: 1284px) {
+  .gmap {
+    margin-bottom: 160px; } }
+
+.places-title {
+  display: block;
+  background: #a8276f;
+  opacity: 0.75;
+  color: white;
+  font-size: 28px;
+  height: auto;
+  padding: 0 0 0 10px;
+  margin: -40px 0 0 0; }
+
+.sede-gallery {
+  min-height: 300px;
+  margin-bottom: 30px; }
+  .sede-gallery .gallery-title {
+    margin-bottom: 30px; }
+
+.address {
+  font-size: 25px;
+  padding: 20px 10px; }
+  .address i {
+    margin-right: 15px;
+    color: #a8276f; }
 
 /*# sourceMappingURL=sede.css.map */
